@@ -3,7 +3,6 @@
 META "title" "Clone"
 
 DEF Cube Transform {
-  translation 4.89788 -0.243263 0
   children Shape {
     appearance Appearance {
       material Material {
