@@ -7,6 +7,7 @@ EXTERNPROTO HandleShader [ ]
 
 PROTO Interface [
   # required fields
+  inputOutput SFBool  enabled TRUE
   inputOutput SFBool  displayCenter FALSE
   inputOutput SFVec3f center 0 0 0
   inputOutput SFVec3f axisOfRotation 0 0 0
