@@ -4,6 +4,7 @@ META "generator" "Titania V0.6.7, http://titania.create3000.de"
 
 PROTO Interface [
   # required fields
+  inputOutput SFBool     enabled TRUE
   inputOutput SFColor    color 0.35 1 0.7
   inputOutput SFVec3f    size 1 1 1
   inputOutput SFVec3f    center 0 0 0
