@@ -1,3 +1,8 @@
+2014-05-15  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Clone.wrl:
+	* OutlineEditor.x3d: 
+
 2014-05-14  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Clone.wrl: 
